After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 646630 - account-widgets: fix glade sizing issues
account-widgets: fix glade sizing issues
Status: RESOLVED FIXED
Product: empathy
Classification: Core
Component: General
unspecified
Other All
: High critical
: 3.2
Assigned To: empathy-maint
empathy-maint
Depends on:
Blocks:
 
 
Reported: 2011-04-03 16:23 UTC by Diego Escalante Urrelo (not reading bugmail)
Modified: 2011-09-26 10:59 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
e-account-widget-jabber: fix sizing issues (49.34 KB, patch)
2011-04-03 16:23 UTC, Diego Escalante Urrelo (not reading bugmail)
committed Details | Review
e-account-widget-msn: fix sizing issues (12.18 KB, patch)
2011-04-03 16:23 UTC, Diego Escalante Urrelo (not reading bugmail)
none Details | Review
e-account-widget-jabber: Use GtkGrid instead of GtkTable (10.89 KB, patch)
2011-09-22 12:53 UTC, Xavier Claessens
committed Details | Review
Glade: GtkGrid does not have n-rows and n-columns properties as GtkTable (1.58 KB, patch)
2011-09-23 10:50 UTC, Xavier Claessens
accepted-commit_now Details | Review
Glade: fix sizing in SIP accounts widget (1.60 KB, patch)
2011-09-23 10:50 UTC, Xavier Claessens
accepted-commit_now Details | Review
empathy-account: add a --assistant option to force having assistant (3.36 KB, patch)
2011-09-23 10:50 UTC, Xavier Claessens
accepted-commit_after_freeze Details | Review
e-account-widget-irc: Use a GtkGrid to fix label wrapping (30.53 KB, patch)
2011-09-23 10:50 UTC, Xavier Claessens
accepted-commit_after_freeze Details | Review
glade: remove unseless placeholder added by Glade editor (1.81 KB, patch)
2011-09-23 11:07 UTC, Xavier Claessens
none Details | Review
empathy-account: add a --assistant option to force having assistant (3.36 KB, patch)
2011-09-23 11:32 UTC, Xavier Claessens
none Details | Review
e-account-widget-irc: Use a GtkGrid to fix label wrapping (7.99 KB, patch)
2011-09-23 11:34 UTC, Xavier Claessens
none Details | Review

Description Diego Escalante Urrelo (not reading bugmail) 2011-04-03 16:23:19 UTC
The account widgets of the different protocols have ugly size issues. To verify this just open empathy-accounts and resize the window to something big (let's say twice the default size) and you'll see that widgets expand and ugly spaces are created.
These patches try to fix that.
Comment 1 Diego Escalante Urrelo (not reading bugmail) 2011-04-03 16:23:22 UTC
Created attachment 185037 [details] [review]
e-account-widget-jabber: fix sizing issues

Fix the glade file for sizing issues

Bug #646630
Comment 2 Diego Escalante Urrelo (not reading bugmail) 2011-04-03 16:23:25 UTC
Created attachment 185038 [details] [review]
e-account-widget-msn: fix sizing issues

Fix glade file for sizing issues.

Bug #646630
Comment 3 Diego Escalante Urrelo (not reading bugmail) 2011-04-03 17:46:24 UTC
One of my remaining problems with this is that when you open the accounts preferences in control-center you get a fixed size window.
It sucks for the Advanced expander of jabber settings.

I'd like to make the expander make the window as big as possible/necessary, but still be in the viewport so it can be resized if necessary.
I think what I'm saying is that the "natural" size should be "everything visible" when the expander is open, but should not force "natural" to be "minimum". Don't know if this is clear :)
Comment 4 Guillaume Desmottes 2011-09-07 06:53:41 UTC
> One of my remaining problems with this is that when you open the accounts
> preferences in control-center you get a fixed size window.
> It sucks for the Advanced expander of jabber settings.

The control-center integration has gone away (bug #655388) so that's not
really an issue any more. :)
We've done some changes in the accounts dialog recently. Could you please try
rebasing your patches and check if there are still needed?
Comment 5 Diego Escalante Urrelo (not reading bugmail) 2011-09-07 20:31:47 UTC
Been testing master, and yes, sometimes there are really weird sizes in the accounts window. I'll try to rebase this weekend.
Comment 6 Guillaume Desmottes 2011-09-19 12:45:44 UTC
Any progress on this?
Comment 7 Xavier Claessens 2011-09-22 12:53:22 UTC
Created attachment 197243 [details] [review]
e-account-widget-jabber: Use GtkGrid instead of GtkTable

This work around bug #657621
Comment 8 Xavier Claessens 2011-09-22 12:57:36 UTC
My patch applies on top of attachment #185037 [details]. With both, the dialog seems perfect now :)

Note that attachment #185038 [details] does not apply on master anymore...
Comment 9 Xavier Claessens 2011-09-22 13:01:15 UTC
ok, merge both jabber patches. Same change is needed on all other widgets now.
Comment 10 Xavier Claessens 2011-09-23 10:50:16 UTC
Created attachment 197334 [details] [review]
Glade: GtkGrid does not have n-rows and n-columns properties as GtkTable
Comment 11 Xavier Claessens 2011-09-23 10:50:21 UTC
Created attachment 197335 [details] [review]
Glade: fix sizing in SIP accounts widget
Comment 12 Xavier Claessens 2011-09-23 10:50:27 UTC
Created attachment 197336 [details] [review]
empathy-account: add a --assistant option to force having assistant

This makes easier to test it
Comment 13 Xavier Claessens 2011-09-23 10:50:30 UTC
Created attachment 197337 [details] [review]
e-account-widget-irc: Use a GtkGrid to fix label wrapping
Comment 14 Guillaume Desmottes 2011-09-23 10:57:31 UTC
Review of attachment 197334 [details] [review]:

++
Comment 15 Guillaume Desmottes 2011-09-23 10:58:50 UTC
Review of attachment 197336 [details] [review]:

Will merge to master after branching as that introduces a new string.
Comment 16 Guillaume Desmottes 2011-09-23 11:04:04 UTC
Review of attachment 197335 [details] [review]:

++
Comment 17 Guillaume Desmottes 2011-09-23 11:07:15 UTC
Review of attachment 197337 [details] [review]:

++
Comment 18 Xavier Claessens 2011-09-23 11:07:56 UTC
Created attachment 197341 [details] [review]
glade: remove unseless placeholder added by Glade editor
Comment 19 Xavier Claessens 2011-09-23 11:32:17 UTC
Created attachment 197345 [details] [review]
empathy-account: add a --assistant option to force having assistant

This makes easier to test it
Comment 20 Xavier Claessens 2011-09-23 11:34:07 UTC
Created attachment 197346 [details] [review]
e-account-widget-irc: Use a GtkGrid to fix label wrapping
Comment 21 Xavier Claessens 2011-09-26 10:59:30 UTC
Ok, everything merged to master now, for 3.4.