empathy-account: add a --assistant option to force having assistant

This makes easier to test it

https://bugzilla.gnome.org/show_bug.cgi?id=646630